Update Desafio de Programacao 5.ipynb

--- a/Convolutional Neural Network/Desafio de Programacao 5.ipynb
+++ b/Convolutional Neural Network/Desafio de Programacao 5.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "## Identificação:\n",
     "\n",
-    "**Nome do avatar: Genos**\n",
+    "**Nome do avatar: **\n",
     "\n",
     "**Matrícula: 190084731**"
    ]
